static/css/layout.css
body {
    background-color: var(--color-body-bg);
    color: var(--color-body-fg);
    cursor: default;
    padding: 3rem;
    padding-top: 0.7rem;
    max-width: 100%;
}

main {
    padding-top: 1rem;
}

.header .title {
    display: inline-block;
}

.header .links {
    float: right;
}

.hlist {
    word-break: break-all;
}

.hlist ul {
    display: inline;
    margin: 0;
    padding: 0;
}

.hlist li {
    display: inline;
}

.hlist li:not(:last-child) {
    padding-right: 0.286em;
}

.hlist li:not(:last-child)::before {
    content: "";
}

.hlist li:not(:last-child)::after {
    content: "/";
}

.hlist li ul li:first-child::before {
    content: "(";
}

.hlist li ul li:last-child::after {
    content: ")";
}

.pager {
    text-align: center;
}

.pager li:not(:last-child)::after {
    content: "  " !important;
}

